...


    const getAllChannels = async () => {
    try {
        const userChannelsData = await getMyChannels();
        const filteredJoined = userChannelsData.joinedPublicChannels.filter(
            (channel) => channel.tag !== "#everyone",
        );
        setJoinedChannels(filteredJoined); 
    } catch (err) {
        console.log("Error in fetching channels", err);
    }
};
...
            await revertInvitation(inviteeId, status);
            setInviteCount?.((prev) => prev - 1);
            setInvitedUsers((prev) =>
                prev.filter((user) => user.id !== inviteeId),
            );
            const user = users[index];
            user["status"] = "Invite";
            const updatedUsers = users;
            updatedUsers.splice(index, 1, user);
            setUsers(updatedUsers);
            showMessage({
                message: "Invitation withdrawn!",
                type: "info",
...
                    alignSelf: "center",
                    width: "100%",
                    backgroundColor: "white",
                }}
            >
                <Button
                    title="Join the App"
                    buttonStyle={{
                        marginVertical: 12,
                        borderRadius: 30,
                        padding: 12,
                        backgroundColor:
                            invitedUsers.length + emailInviteCount < 3 ||
...
