...
                    on your team. There may not be enough people around on your
                    team to burst your posts.
                </Text>
            </View>
            <View style={styles.btnBar}>
                <Button
                    title={"Dismiss"}
                    buttonStyle={styles.dismissButton}
                    titleStyle={{ color: theme.colors.lightBlue }}
                    onPress={() => {
                        sheetRef?.current.close();
                    }}
                />
...
