...
    // );
    // const privateChannels = channels.filter(
    //     (channel) => channel.tag !== "#everyone" && channel.type === "private",
    // );

    const data = [
        { id: 0, tag: "All Feeds", type: "public" },
        ...(everyoneChannel ? [everyoneChannel] : []),
        ...otherChannels,
        // ...privateChannels,
        // ...publicChannels,
    ];

...
