...
            [
                {
                    text: "Cancel",
                    style: "cancel",
                },
                {
                    text: "Confirm",
                    style: "destructive",
                    onPress: async () => {
                        try {
                            //remove image key
                            setAvatarSource(null);
                            profileImageOptionsSheetRef?.current?.close();
...
    };

    const updatePassword = async () => {
        try {
            const data = await resetPassword(userEmail, userPassword);
            showMessage({
                message: "Password Updated.",
                type: "success",
            });
        } catch (e) {
            showMessage({
                message: "Error while updating password",
                type: "danger",
...
                                    } else {
                                        setDisplayNameValue("");
                                    }
                                }}
                                autoCapitalize="none"
                                autoCorrect={false}
                                testID="displayName-edit"
                            />
                            {displayNameError ? (
                                <Text style={styles.errorText}>
                                    {displayNameError}
                                </Text>
                            ) : null}
...
                                    onChangeText={(text) =>
                                        setUserPassword(text.replace(/\s/g, ""))
                                    }
                                    autoCapitalize="none"
                                    autoCorrect={false}
                                    secureTextEntry={!passwordVisible}
                                    testID="new-password-edit"
                                />
                                <TouchableOpacity
                                    onPress={() => {
                                        setPassWordVisible((prev) => !prev);
                                    }}
                                    style={styles.icon}
...
                                            text.replace(/\s/g, ""),
                                        )
                                    }
                                    autoCapitalize="none"
                                    autoCorrect={false}
                                    secureTextEntry={!confirmPassWordVisible}
                                    testID="confirm-password-edit"
                                />
                                <TouchableOpacity
                                    onPress={() => {
                                        setConfirmPasswordVisible(
                                            (prev) => !prev,
                                        );
...
