...
            </TouchableOpacity>

            <TouchableOpacity
                disabled={loading}
                onPress={handleProfileSetting}
                style={styles.iconContainer}
                testID="profile-settings"
            >
                <Image source={SettingImage} style={styles.icon} />
            </TouchableOpacity>

            {profileSettingVisible && (
                <ProfileSetting
...
