...
            </Text>
            <View style={styles.confirmButtonContainer}>
                <TouchableOpacity
                    style={styles.confirmButton}
                    onPress={onConfirm}
                >
                    <Text style={styles.confirmButtonText}>Confirm</Text>
                </TouchableOpacity>
                <TouchableOpacity style={styles.cancelButton} onPress={onClose}>
                    <Text style={styles.cancelButtonText}>Cancel</Text>
                </TouchableOpacity>
            </View>
            {/* </View> */}
...
