...
                <View style={styles.action}>
                    <View style={styles.btn}>
                        <TouchableOpacity
                            style={styles.actionIcon}

                            onPress={handleReplyPress}
                            testID="add-reply"
                        >
                            <ReplySVG />
                        </TouchableOpacity>
                    </View>

                    {latestReplyCount > 0 && (
...
                </View>
                <View style={styles.action}>
                    <View style={styles.btn}>
                        <TouchableOpacity
                            style={styles.actionIcon}
                            onPress={handleQuotePress}
                            testID="add-quote"
                        >
                            <QuoteSVG />
                        </TouchableOpacity>
                    </View>

                    {latestQuoteCount > 0 && (
...
