...
        }
        setLoading(false);
    };
    const labelContent = loading ? (
        <Loader size="small" color="white" />
    ) : (
        "Reply"
    );
    const layoutContainerHeight = (e) => {
        setContainerHeight(e.nativeEvent.layout.height);
    };
    const layoutContentHeight = (e) => {
        setContentHeight(e.nativeEvent.layout.height);
...
                                                        onLayout={
                                                            layoutContentHeight
                                                        }
                                                        style={
                                                            styles.inputField
                                                        }
                                                        placeholder="Post your reply"
                                                        placeholderTextColor="#666666"
                                                        multiline
                                                        value={replyText}
                                                        onChange={scrollToEnd}
                                                        onChangeText={
                                                            handleInputChange
...
