...
            [
                {
                    text: "Cancel",
                    onPress: () => console.log("Cancel"),
                },
                {
                    text: "Delete",
                    onPress: () => handleDeletePress(),
                },
            ],
        );
    };

...
                >
                    <Text style={styles.dateText}>{getDateString()}</Text>
                    {showActions && (
                        <TouchableOpacity
                            style={styles.trash}
                            onPress={handleDeleteModal}
                            testID="delete-post"
                        >
                            <TrashSVG />
                        </TouchableOpacity>
                    )}
                </View>
                {showActions && isERT && (
...
