...
            [
                {
                    text: "Cancel",
                    style: "cancel",
                },
                {
                    text: "Confirm",
                    style: "destructive",
                    // onPress: async () => {
                    //     try {
                    //         await deletePost(postId);
                    //         removePost(postId);
                    //     } catch (error) {
...
                                </View>
                                {post.author.id === parseInt(userId, 10) &&
                                    postTypes.feedReply &&
                                    isMainFeed === false && (
                                        <TouchableOpacity
                                            onPress={deleteConfirmationAlert}
                                            testID="delete-reply"
                                        >
                                            <TrashSVG />
                                        </TouchableOpacity>
                                    )}
                                {post.author.id === parseInt(userId, 10) && !postTypes.feedReply && (
                                    <TouchableOpacity
...
