appId: "com.mycurio.curio"
---
- tapOn:
      id: "profile-nav-icon"
- tapOn:
      id: "profile-settings"
- tapOn:
      id: "displayName-edit"
- eraseText
- inputText: "New_Display_Name"
# hideKeyboard is not working here, so i used to tap on Display Name to hide it
- tapOn:
      point: "11%,23%"
- swipe:
      start: "45%,83%"
      end: "50%,60%"
      duration: 632
- tapOn: "Confirm"
- waitForAnimationToEnd
- assertVisible: "New_Display_Name"
