appId: "com.mycurio.curio"
---
# - launchApp
- waitForAnimationToEnd
# - assertVisible: "Login"

# - tapOn:
#     point: 14%,51%
# - inputText: "mabel@yopmail.com"

# # Tap outside to dismiss keyboard
# - tapOn:
#     point: 12%,29%

# # Tap on Password field and enter text
# - tapOn:
#     point: 17%,61%
# - inputText: "Test@123"

# - tapOn:
#     point: 12%,29%


# # Tap on Login button
# - tapOn: "Login"

# # Verify login success
# - assertNotVisible: "Login"

- tapOn:
      id: create-post-tab-icon

- tapOn: "What's on your mind?"
- inputText: "This is a test post"

- tapOn: "Post"

- waitForAnimationToEnd

- tapOn: "Post"

- waitForAnimationToEnd

- tapOn:
      id: "add-reply"
      index: 0
- waitForAnimationToEnd
- tapOn: "Post your reply"
- inputText: "Test Reply"
- tapOn: "Reply"

- waitForAnimationToEnd
- tapOn: "Reply"
- waitForAnimationToEnd

- tapOn:
      text: "This is a test post"

- waitForAnimationToEnd
- assertVisible: "Test Reply"

- tapOn:
      id: "delete-reply"
- tapOn: "Confirm"
- waitForAnimationToEnd

# - assertNotVisible: "Test Reply"

- tapOn:
      id: "back_button"

- tapOn:
      id: "profile-nav-icon"

- waitForAnimationToEnd
- tapOn:
      id: "delete-post"
      index: 0

- tapOn: "Delete"
- waitForAnimationToEnd


# - tapOn:
#       id: "profile-nav-icon"

# - tapOn:
#       id: "profile-more"
# - tapOn: "Logout"
# - tapOn: "Logout"
# - waitForAnimationToEnd
# - assertVisible: "Login"

